projects/vb6parse/snapshots/syntax/library/statements/savesetting/savesetting_error_handling.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: ResumeKeyword
          text: Resume
        - kind: Whitespace
          text: " "
        - kind: NextKeyword
          text: Next
        - kind: Newline
          text: "\n"
    - kind: SaveSettingStatement
      children:
        - kind: SaveSettingKeyword
          text: SaveSetting
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"MyApp\""
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Settings\""
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Value\""
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: data
    - kind: Newline
      text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: MemberAccessExpression
              children:
                - kind: Identifier
                  text: Err
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Number
            - kind: Whitespace
              text: " "
            - kind: InequalityOperator
              text: "<>"
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "0"
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: MsgBox
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Error saving settings\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
