projects/vb6parse/snapshots/syntax/library/statements/savesetting/savesetting_in_select_case.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: mode
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SaveSettingStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SaveSettingKeyword
                      text: SaveSetting
                    - kind: Whitespace
                      text: " "
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"MyApp\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Mode\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Current\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Simple\""
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "2"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SaveSettingStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SaveSettingKeyword
                      text: SaveSetting
                    - kind: Whitespace
                      text: " "
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"MyApp\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Mode\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Current\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Advanced\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
